modificacion de rutas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout de e-commerce</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!--Contenido-->
@@ -32,25 +32,25 @@
         <main>
             <div class="cards">
                 <div class="card-image card1">
-                    <img src="/assets/imgs/perfume-shakira.png" alt="Perfume-Shakira">
+                    <img src="./assets/imgs/perfume-shakira.png" alt="Perfume-Shakira">
                     <h3>Perfume Shakira</h3>
                     <p>31.400</p>
                     <p class="btn">Comprar</p>
                 </div>
                 <div class="card-image card2">
-                    <img src="/assets/imgs/perfume-kim.jpeg" alt="Perfume-Kim">
+                    <img src="./assets/imgs/perfume-kim.jpeg" alt="Perfume-Kim">
                     <h3>Perfume Kim Kardashian</h3>
                     <p>68.900</p>
                     <p class="btn">Comprar</p>
                 </div>
                 <div class="card-image card3">
-                    <img src="/assets/imgs/zapatos-taco.jpeg" alt="Zapatos">
+                    <img src="./assets/imgs/zapatos-taco.jpeg" alt="Zapatos">
                     <h3>Zapatos Negros</h3>
                     <p>29.799</p>
                     <p class="btn">Comprar</p>
                 </div>
                 <div class="card-image card4">
-                    <img src="/assets/imgs/zapatilla.jpeg" alt="Zapatillas">
+                    <img src="./assets/imgs/zapatilla.jpeg" alt="Zapatillas">
                     <h3>Zapatillas</h3>
                     <p>44.700</p>
                     <p class="btn">Comprar</p>
